--- a/app/Resources/views/customer/dashboard.html.twig
+++ b/app/Resources/views/customer/dashboard.html.twig
@@ -1,6 +1,7 @@
 {% extends "base.html.twig" %}
 {% block body %}
 
+ {{ include('customer/nav.twig') }}
 
 <div class='row'>
     <div class='col s12'>
