--- a/app/Resources/views/customer/order.html.twig
+++ b/app/Resources/views/customer/order.html.twig
@@ -1,14 +1,15 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-
+ {{ include('customer/nav.twig') }}
+{# 
 <pre>
     {{ dump(sellerProduct) }}
 </pre>
     <pre>
         {{ dump(product) }}
     </pre>
-  
+   #}
 
     {# {{product.brand.name}} #}
     {# {{product.model.name}} #}
